2020-12-14  James K. Lowden  <jklowden@symas.com>

	* common.h (likely, unlikely): never use __builtin_expect

2020-12-09  Ron Norman <rjn@inglenet.com>

	* common.c: If the system supports sigaction then codegen.c emits
	  code to catch an abort while dumping and recover
	  the routine cob_set_dump_signal sets up the signal processing;
	  Added cob_get_sig_name and cob_get_sig_description;
	  Rewrote cob_set_signal to be table driven

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
	  to be checked for "same as" and to allow that also with nested OCCURS

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.h, intrinsic.c: removed unused include sys/timeb.h and definitions
	  for timeb and ftime
	* termio.c (setup_lvlwrk_and_dump_null_adrs): handle level 0 as INDEX

2020-12-04  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_open): honor cob_unix_lf for pipes (binary mode,
	  especially for WIN32)
	* fileio.c (cob_file_close)[_MSC_VER]: fixed crash on close - at least for
	  this compiler a file close also closes the attached file-stream

2020-11-30  Ron Norman <rjn@inglenet.com>

	* common.c (cob_check_version): rewrote as it did not work on some platforms

2020-11-30  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c, common.h (cob_dump_field): adjusted variable types to unsigned
	* termio.c (cob_dump_field): extracted setup_lvlwrk_and_dump_null_adrs and
	  setup_varname_with_indices into separate functions and call them only
	  if not skipped because of same data
	* termio.c (cob_dump_field): fixes for non-standard 01 OCCURS for "same as"
	* termio.c (cob_dump_field): postpone output of "same as" to gather multiple
	  identical entries into the same line as "XYZ (1,2..20) same as (1)"

2020-11-26  Ron Norman <rjn@inglenet.com>

	* termio.c: Catch more table entries as repeated

2020-11-24  Ron Norman <rjn@inglenet.com>
